# fsa-reasearch-agent

./: README.md  agent.py  api.py  pyproject.toml  websearch_agent.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
